[gd_scene load_steps=20 format=2]

[ext_resource path="res://Backgrounds/JohnRoom.png" type="Texture" id=1]
[ext_resource path="res://John/John.tscn" type="PackedScene" id=2]
[ext_resource path="res://Entities/Harlequinsprite.tscn" type="PackedScene" id=3]
[ext_resource path="res://Backgrounds/JohnRoom/LittleMonstersPoster.png" type="Texture" id=4]
[ext_resource path="res://Backgrounds/JohnRoom/GhostbustersPoster.png" type="Texture" id=5]
[ext_resource path="res://Backgrounds/JohnRoom/ConAirPoster.png" type="Texture" id=6]
[ext_resource path="res://Backgrounds/JohnRoom/Bed.png" type="Texture" id=7]
[ext_resource path="res://Backgrounds/JohnRoom/Window.png" type="Texture" id=8]
[ext_resource path="res://Backgrounds/JohnRoom/Drawer.png" type="Texture" id=9]
[ext_resource path="res://Backgrounds/JohnRoom/PC.png" type="Texture" id=10]
[ext_resource path="res://Backgrounds/JohnRoom/Notification.png" type="Texture" id=11]
[ext_resource path="res://Backgrounds/JohnRoom/Towel.png" type="Texture" id=12]
[ext_resource path="res://House/JohnRoom.gd" type="Script" id=13]
[ext_resource path="res://Backgrounds/JohnRoom/WiseGuy.png" type="Texture" id=14]
[ext_resource path="res://Backgrounds/JohnRoom/TotemLathe.png" type="Texture" id=15]
[ext_resource path="res://Backgrounds/JohnRoom/WindowView.jpg" type="Texture" id=16]
[ext_resource path="res://House/ShowView.gd" type="Script" id=17]
[ext_resource path="res://Backgrounds/JohnRoom/PesterchumView.png" type="Texture" id=18]

[sub_resource type="Animation" id=1]
resource_name = "Blink"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[node name="JohnRoom" type="Node2D"]
script = ExtResource( 13 )
__meta__ = {
"_edit_horizontal_guides_": [  ]
}
map_size = Vector2( 2180, 1130 )

[node name="Map" type="Node2D" parent="."]
position = Vector2( 1130, 953 )

[node name="Room" type="StaticBody2D" parent="Map"]
position = Vector2( -1, -494 )
z_index = -4

[node name="Sprite" type="Sprite" parent="Map/Room"]
position = Vector2( -1122, -662 )
texture = ExtResource( 1 )
centered = false

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Map/Room"]
visible = false
polygon = PoolVector2Array( -935, 128, -310, -136, 162, 28, 370, -62, 946, 156, 506, 408, 178, 266, -229, 457, -230, 620, 1122, 626, 1120, -666, -1122, -660, -1120, 654, -223, 615, -220, 468, -846, 176 )

[node name="LittleMonstersPoster" type="Sprite" parent="Map" groups=[
"Interactables",
]]
position = Vector2( -811, -678 )
texture = ExtResource( 4 )

[node name="InteractArea" type="Area2D" parent="Map/LittleMonstersPoster"]
collision_layer = 2
collision_mask = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Map/LittleMonstersPoster/InteractArea"]
polygon = PoolVector2Array( -16, 125, -16, -96, 123, -139, 126, 96, 66, 114, 42, 100 )

[node name="ConAirPoster" type="Sprite" parent="Map" groups=[
"Interactables",
]]
position = Vector2( -417, -809 )
texture = ExtResource( 6 )

[node name="InteractArea" type="Area2D" parent="Map/ConAirPoster"]
collision_layer = 2
collision_mask = 2
__meta__ = {
"_edit_group_": true
}

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Map/ConAirPoster/InteractArea"]
polygon = PoolVector2Array( -91, 173, -92, -111, -50, -124, -19, 99, -78, 124, -77, 169 )

[node name="GhostbustersMacAndMePosters" type="Sprite" parent="Map"]
position = Vector2( -155, -807 )
texture = ExtResource( 5 )

[node name="GhostbustersPoster" type="Node2D" parent="Map/GhostbustersMacAndMePosters" groups=[
"Interactables",
]]

[node name="InteractArea" type="Area2D" parent="Map/GhostbustersMacAndMePosters/GhostbustersPoster"]
collision_layer = 2
collision_mask = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Map/GhostbustersMacAndMePosters/GhostbustersPoster/InteractArea"]
polygon = PoolVector2Array( -126, 50, -141, -145, -9, -137, -3, -55, -24, 55 )

[node name="MacAndMePoster" type="Node2D" parent="Map/GhostbustersMacAndMePosters" groups=[
"Interactables",
]]

[node name="InteractArea" type="Area2D" parent="Map/GhostbustersMacAndMePosters/MacAndMePoster"]
collision_layer = 2
collision_mask = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Map/GhostbustersMacAndMePosters/MacAndMePoster/InteractArea"]
position = Vector2( 134, 64 )
polygon = PoolVector2Array( -164, 33, -128, -157, 7, -108, -30, 81 )

[node name="Window" type="Sprite" parent="Map" groups=[
"Interactables",
]]
position = Vector2( 61, -719 )
texture = ExtResource( 8 )

[node name="InteractArea" type="Area2D" parent="Map/Window"]
collision_layer = 2
collision_mask = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Map/Window/InteractArea"]
polygon = PoolVector2Array( -87, 112, -87, 85, -67, 77, -67, -158, -51, -164, 87, -128, 86, 153, 68, 163 )

[node name="Towel" type="Sprite" parent="Map" groups=[
"Interactables",
]]
position = Vector2( -171, -510 )
texture = ExtResource( 12 )
centered = false

[node name="InteractArea" type="Area2D" parent="Map/Towel"]
collision_layer = 2
collision_mask = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Map/Towel/InteractArea"]
polygon = PoolVector2Array( 83, 116, 27, 83, 26, 59, 15, 57, 124, -2, 178, 13, 160, 39, 206, 53, 169, 89 )

[node name="TotemLathe" type="StaticBody2D" parent="Map" groups=[
"Interactables",
]]
position = Vector2( 636, -600 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Map/TotemLathe"]
texture = ExtResource( 15 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Map/TotemLathe"]
polygon = PoolVector2Array( -339, 77, -268, 41, 218, 211, 221, 257, 170, 290 )

[node name="InteractArea" type="Area2D" parent="Map/TotemLathe"]
collision_layer = 2
collision_mask = 2147483650

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Map/TotemLathe/InteractArea"]
polygon = PoolVector2Array( -234, 122, -234, -85, -219, -91, -220, -137, -239, -141, -240, -274, -182, -291, 117, -204, 114, -147, 60, -129, 60, -48, 32, -7, 6, -5, 5, 54, 107, 94, 111, 44, 279, 95, 274, 146, 226, 147, 225, 259, 173, 291 )

[node name="Bed" type="StaticBody2D" parent="Map"]
position = Vector2( -271, -703 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Map/Bed"]
texture = ExtResource( 7 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Map/Bed"]
polygon = PoolVector2Array( -236, 108, -236, 166, 45, 270, 231, 179, 231, 123, -64, 36 )

[node name="Door" type="Node2D" parent="Map/Bed" groups=[
"Interactables",
]]

[node name="InteractArea" type="Area2D" parent="Map/Bed/Door"]
collision_layer = 2
collision_mask = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Map/Bed/Door/InteractArea"]
polygon = PoolVector2Array( -193, -228, -148, 105, -136, 108, -11, 52, -60, -272, -75, -278 )

[node name="Box" type="Node2D" parent="Map/Bed" groups=[
"Interactables",
]]
z_index = 1

[node name="InteractArea" type="Area2D" parent="Map/Bed/Box"]
collision_layer = 2
collision_mask = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Map/Bed/Box/InteractArea"]
polygon = PoolVector2Array( -89, 30, -92, 85, -68, 108, -10, 97, -13, 35, -41, 20 )

[node name="Oil" type="Node2D" parent="Map" groups=[
"Interactables",
]]
position = Vector2( -367, -448 )
__meta__ = {
"_edit_group_": true
}

[node name="InteractArea" type="Area2D" parent="Map/Oil"]
collision_layer = 2
collision_mask = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Map/Oil/InteractArea"]
polygon = PoolVector2Array( -124, 6, -130, 1, -126, -20, -134, -25, -123, -36, -108, -36, -106, -51, -80, -53, -58, -46, -47, -72, -22, -66, 0, -47, 19, -56, 34, -46, 50, -36, 66, -17, 82, 23, 62, 24, 47, -13, 19, 43, -9, 38, -29, 86, -61, 69, -38, 36, -55, 28, -71, 40, -82, 31, -83, 13 )

[node name="YSort" type="YSort" parent="Map"]
position = Vector2( -1, -494 )

[node name="John" parent="Map/YSort" instance=ExtResource( 2 )]
position = Vector2( -530, 50 )

[node name="Harlequinsprite" parent="Map/YSort" instance=ExtResource( 3 )]
position = Vector2( -124, -114 )

[node name="Drawer" type="StaticBody2D" parent="Map/YSort"]
position = Vector2( -778, 56 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Map/YSort/Drawer"]
texture = ExtResource( 9 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Map/YSort/Drawer"]
polygon = PoolVector2Array( -143, 72, -12, 137, 143, 64, 143, 14, -6, -47, -140, 18 )

[node name="WiseGuy" type="StaticBody2D" parent="Map/YSort" groups=[
"Interactables",
]]
position = Vector2( 273, 216 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Map/YSort/WiseGuy"]
texture = ExtResource( 14 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Map/YSort/WiseGuy"]
polygon = PoolVector2Array( -13, 63, -76, -1, -76, -22, 11, -59, 69, -3, 64, 26 )

[node name="InteractArea" type="Area2D" parent="Map/YSort/WiseGuy"]
collision_layer = 2
collision_mask = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Map/YSort/WiseGuy/InteractArea"]
polygon = PoolVector2Array( -13, 63, -76, -1, -76, -22, 11, -59, 69, -3, 64, 26 )

[node name="PC" type="StaticBody2D" parent="Map" groups=[
"Interactables",
]]
position = Vector2( -287, -246 )

[node name="Sprite" type="Sprite" parent="Map/PC"]
texture = ExtResource( 10 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Map/PC"]
polygon = PoolVector2Array( -221, 71, 65, 209, 225, 129, 225, 116, -83, -22, -154, 39, -218, 29 )

[node name="Notification" type="Sprite" parent="Map/PC"]
visible = false
position = Vector2( 9, -243 )
texture = ExtResource( 11 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Map/PC/Notification"]
autoplay = "Blink"
anims/Blink = SubResource( 1 )

[node name="InteractArea" type="Area2D" parent="Map/PC"]
collision_layer = 2
collision_mask = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Map/PC/InteractArea"]
polygon = PoolVector2Array( -71, -60, -52, -83, -77, -94, -88, -185, -66, -196, 28, -167, 45, -54, 27, -49, -5, -65, -3, -44, -17, -36 )

[node name="BedroomDoorInside" type="Node2D" parent="Map" groups=[
"Interactables",
]]

[node name="InteractArea" type="Area2D" parent="Map/BedroomDoorInside"]
collision_layer = 2
collision_mask = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Map/BedroomDoorInside/InteractArea"]
polygon = PoolVector2Array( -654, -527, -634, -518, -541, -546, -535, -873, -659, -826 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 2187, 998 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="WindowView" type="TextureRect" parent="CanvasLayer" groups=[
"Views",
]]
visible = false
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 0
mouse_default_cursor_shape = 2
texture = ExtResource( 16 )
script = ExtResource( 17 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PesterchumView" type="TextureRect" parent="CanvasLayer" groups=[
"Views",
]]
visible = false
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 0
mouse_default_cursor_shape = 2
texture = ExtResource( 18 )
script = ExtResource( 17 )
__meta__ = {
"_edit_use_anchors_": false
}
